--- a/src/app/features/home/home-calculator/home-calculator.html
+++ b/src/app/features/home/home-calculator/home-calculator.html
@@ -1,4 +1,4 @@
-<section class="calculator-section relative py-20 overflow-hidden">
+<section class="calculator-section relative py-30 overflow-hidden">
     <div class="container mx-auto px-5 lg:px-20 relative z-10">
         <div class="flex flex-col items-center justify-center text-center max-w-4xl mx-auto">
             <!-- Title -->
@@ -7,7 +7,7 @@
             </h2>
 
             <!-- Description -->
-            <p class="text-xl md:text-2xl font-normal text-white mb-8 leading-relaxed max-w-3xl">
+            <p class="text-xl md:text-2xl font-medium text-white mb-8 leading-relaxed max-w-3xl">
                 احسب قيمة الذهب والفضة والمعادن بسهولة عبر حاسبة الذهب كل ما تحتاجه هو بضع خطوات بسيطة لتكشف لك السعر الدقيق فورًا وفق الأسعار المباشرة. جربها الآن واحصل على تقدير فوري.
             </p>
 
@@ -27,6 +27,6 @@
         <img src="/images/calc.webp" alt="calculator background" 
             class="w-full h-full object-cover object-center" 
             width="1920" height="600" />
-        <div class="absolute inset-0 bg-linear-to-b from-[#D0A51A]/90 to-[#B8941A]/90"></div>
+        <div class="absolute inset-0 bg-linear-to-t from-[#D0A51A] to-[#B8941A]/90"></div>
     </div>
 </section>
