--- a/src/app/core/components/footer/footer.css
+++ b/src/app/core/components/footer/footer.css
@@ -9,19 +9,13 @@
   overflow: hidden;
 }
 
-.footer-upper::before {
-  content: '';
+.footer-bg-img {
   position: absolute;
   top: 0;
   left: 0;
-  right: 0;
-  bottom: 0;
-  background-image: 
-    url("data:image/svg+xml,%3Csvg width='120' height='120' xmlns='http://www.w3.org/2000/svg'%3E%3Cg opacity='0.15'%3E%3Cpath d='M60 15 L55 40 L48 32 L50 65 L60 58 L70 65 L72 32 L65 40 Z' fill='white'/%3E%3Cpath d='M60 15 L58 25 L62 25 Z' fill='white'/%3E%3C/g%3E%3C/svg%3E");
-  background-size: 150px 150px;
-  background-position: 0 0;
-  background-repeat: repeat;
-  opacity: 0.4;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   pointer-events: none;
 }
 
@@ -86,7 +80,10 @@
 
 /* Lower Section: Dark Brown Background */
 .footer-lower {
-  background-color: #3C2E00;
+  /* background-color: #3C2E00; */
+  backdrop-filter: blur(2px);
+  position: relative;
+  overflow: hidden;
 }
 
 .footer-lower-link {
