--- a/src/app/features/home/home-about/home-about.html
+++ b/src/app/features/home/home-about/home-about.html
@@ -1,5 +1,5 @@
 <section class="relative h-screen">
-    <div class="container mx-auto px-20 py-20">
+    <div class="container mx-auto px-5 lg:px-20 py-20">
         <div class="grid grid-cols-1 lg:grid-cols-2 items-center  mt-10 ">
 
             
@@ -11,13 +11,13 @@
                     مصدر
                     الثقة الأول في سوق المعادن الثمينة داخل الإمارات.
                 </p>
-                <div class="mt-6">
+                <div class="mt-6 lg:block hidden">
                     <app-app-button btnText="اقرأ المزيد" routerLink="/about-us"></app-app-button>
                 </div>
             </div>
 
             <!-- IMAGE WITH SOCIAL MEDIA -->
-            <div class="ms-auto relative  h-full z-10!">
+            <div class=" pt-10 lg:pt-0 lg:mt-0 lg:ms-auto relative  h-full z-10!">
                 <!-- Social Media Strip -->
                 <div class="social-strip flex flex-col items-center justify-between ">
                     <a href="#" class="social-icon" aria-label="Facebook">
@@ -35,9 +35,13 @@
                 </div>
                 
                 <!-- Image -->
-                <div class="clip h-125 w-100">
+                <div class="clip h-125   md:w-full">
                     <img src="images/about.png" alt="about" width="800" height="600" class="w-full h-full object-cover object-center rounded-3xl" />
                 </div>
+            </div>
+
+            <div class="mt-6 lg:hidden block relative z-10!">
+                <app-app-button btnText="اقرأ المزيد" routerLink="/about-us"></app-app-button>
             </div>
         </div>
     </div>
@@ -45,6 +49,6 @@
 
     <div class="w-full mt-10 h-[100px] mb-10 ">
         <img src="images/section-end.webp" alt="decoration"
-            class="w-full absolute bottom-[-5%]!  object-cover object-center" />
+            class="w-full absolute bottom-[-20%]! md:bottom-[-14%]! lg:bottom-[-5%]!  object-cover object-center" />
     </div>
 </section>
