Adding about page

--- a/src/app/features/home/home-calculator/home-calculator.html
+++ b/src/app/features/home/home-calculator/home-calculator.html
@@ -12,7 +12,7 @@
             </p>
 
             <!-- CTA Button -->
-            <a routerLink="/calculator" class="calculator-btn px-8 py-4 bg-[#00843D] text-white font-medium text-lg rounded-xl flex items-center gap-3 transition duration-300 hover:bg-[#006B2E] shadow-lg">
+            <a routerLink="/gold-calculator" class="calculator-btn px-8 py-4 bg-[#00843D] text-white font-medium text-lg rounded-xl flex items-center gap-3 transition duration-300 hover:bg-[#006B2E] shadow-lg">
               
                 <span>جربها الان</span>
                 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
